implemented new changes

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <nav>
         <ul>
             <li class="brand"><img src="logo.png" alt="Zazz">Zazz</li>
-            <li>Home</li>
-            <li>About</li>
+            <li class="home">Home</li>
+            <li class="about">About</li>
         </ul>
     </nav>
  
@@ -22,32 +22,32 @@
             <h1>Best of Organic - No Copyright Sounds</h1>
             <div class="songItemContainer">
                 <div class="songItem">
-                    <img src="covers/satisfyacover.jpg" alt="1" >
+                    <img alt="1" >
                     <span class="songName">Satisfya</span>
                     <span class="songlistplay"><span class="timestamp">3:00 <i id="1" class="fas songItemPlay fa-play-circle"></i></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="covers/satisfyacover.jpg" alt="1" >
+                    <img alt="1" >
                     <span class="songName">Satisfya</span>
                     <span class="songlistplay"><span class="timestamp">3:50 <i id="2" class="fas songItemPlay fa-play-circle"></i></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="covers/satisfyacover.jpg" alt="1" >
+                    <img alt="1" >
                     <span class="songName">Satisfya</span>
                     <span class="songlistplay"><span class="timestamp">3:17 <i id="3" class="fas songItemPlay fa-play-circle"></i></span></span>
                 </div>
                 <div class="songItem"> 
-                    <img src="covers/satisfyacover.jpg" alt="1" >
+                    <img alt="1" >
                     <span class="songName">Satisfya</span>
                     <span class="songlistplay"><span class="timestamp">5:00 <i id="4" class="fas songItemPlay fa-play-circle"></i></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="covers/satisfyacover.jpg" alt="1" >
+                    <img alt="1" >
                     <span class="songName">Satisfya</span>
                     <span class="songlistplay"><span class="timestamp">3:28 <i id="5" class="fas songItemPlay fa-play-circle"></i></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="covers/satisfyacover.jpg" alt="1" >
+                    <img alt="1" >
                     <span class="songName">Satisfya</span>
                     <span class="songlistplay"><span class="timestamp">3:48 <i id="6" class="fas songItemPlay fa-play-circle"></i></span></span>
                 </div>
